# Simple-Multiplayer-Winsock2

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: Application.h  Entry.h  GameObject.h  ImGuiLayer.h  Player.h  Sanbox.h  Utils.h
Client/include/Math/: Vector2.h
Client/include/Socket/: ResponseCode.h  Server.h  SocketClient.h
Client/include/Window/: SDLNativeWindow.h  Window.h
Client/src/: Application.cpp  GameObject.cpp  Player.cpp  Sanbox.cpp  main.cpp
Client/src/Socket/: SocketClient.cpp
Client/src/Window/: GLFWNativeWindow.cpp
Release/Client/: .env
Server/: CMakeLists.txt
Server/include/: Application.h  Entry.h  GameObject.h  Player.h  ServerApplication.h  Utils.h
Server/include/Socket/: RequestCode.h  ServerSocket.h
Server/include/Window/: GLFWNativeWindow.h
Server/src/: Application.cpp  Player.cpp  ServerApplication.cpp
Server/src/Socket/: ServerSocket.cpp
Test/: attack.bat  ddos_demo.ps1
include/: Application.h  Entry.h  GameObject.h  Player.h  Sanbox.h  ServerApplication.h  Utils.h
include/Socket/: Client.h  RequestCode.h  Server.h
include/Window/: GLFWNativeWindow.h  SDLNativeWindow.h  Window.h
src/: Application.cpp  ImGuiLayer.cpp  Player.cpp  Sanbox.cpp  ServerApplication.cpp  main.cpp
src/Socket/: Client.cpp  Server.cpp  ServerSocket.cpp  SocketClient.cpp
src/Window/: GLFWNativeWindow.cpp  SDLNativeWindow.cpp
